Rename methods to make them less alike

--- a/app/views/search/index.html.erb
+++ b/app/views/search/index.html.erb
@@ -1,5 +1,5 @@
-<h3><%= @order_of_phoenix_members.count %> Results</h3>
-<% @order_of_phoenix_members.each do |member| %>
+<h3><%= @members.count %> Results</h3>
+<% @members.each do |member| %>
   <ul class="member_of_order_of_the_phoenix">
     <li class="name"><%= member.name %></li>
     <li class="role"><%= member.role %></li>
